Define aspect-ratio to fix layout shift

--- a/app/public/src/pages/component/wiki/wiki.css
+++ b/app/public/src/pages/component/wiki/wiki.css
@@ -232,6 +232,7 @@
 }
 
 #wiki-weather .my-box header .weather-icon {
+  aspect-ratio: 1 / 1;
   height: 40px;
 }
 
